--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body {
-    color: #333;
+    background: #1e1f24;
+    color: #333;    
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -28,8 +29,18 @@ body {
     padding: 0.5em;
 }
 
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
+
+#post {
+    background: white;
+    padding: 1em;
 }
